Reset local image directory when creating a new collection

Having an empty local image directory is a signal to ImageFactory to
return the temp image location.

BUG: 509245
FIXED-IN: 4.1.4