src/tests/documenttest.cpp
@@ -141,7 +141,13 @@ void DocumentTest::testImageLocalDirectory() {
   Tellico::ImageFactory::clean(true);
   QVERIFY(!Tellico::ImageFactory::imageById(e->field("cover")).isNull());
 
-  // sanity check, the directory should not exists after QTemporaryDir destruction
+  // now create a new collection and check the image location
+  // should be changed back to a temporary dir
+  QVERIFY(doc->newDocument(Tellico::Data::Collection::Book));
+  QVERIFY(doc->allImagesOnDisk());
+  QCOMPARE(Tellico::ImageFactory::cacheDir(), Tellico::ImageFactory::TempDir);
+
+  // sanity check, the directory should not exist after QTemporaryDir destruction
   tempDir.remove();
   QVERIFY(!QDir(tempDirName).exists());
 }
